--- a/Shophoto/Shophoto/Views/Projects/AuxView/CreateProject.xaml
+++ b/Shophoto/Shophoto/Views/Projects/AuxView/CreateProject.xaml
@@ -7,51 +7,56 @@
              xmlns:buttons="clr-namespace:Shophoto.Buttons"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:input="clr-namespace:Shophoto.InputBox"
-             mc:Ignorable="d" 
-
-             >
+             mc:Ignorable="d" >
     <StackPanel Width="815" Height="680" Background="WhiteSmoke" Margin="0,0,0,0">
-        <buttons:IconButton Width="75" Height="75" 
-                                    Icon="{iconPacks:Octicons Kind=ChevronLeft, Width=50, Height=50}"
-                                    Background="Transparent" BorderBrush="Transparent"
-                                    VerticalAlignment="Top" HorizontalAlignment="Left"
-                                    Margin="60,40,0,40"
-                                    Command="{Binding GoBackCommand}">
-        </buttons:IconButton>
-        <TextBlock Height="55" Padding="55,0,0,0" Margin="0,0,0,10" FontSize="40">
+        <StackPanel Orientation="Horizontal" Margin="0,50,0,0">
+            <buttons:IconButton Width="40" Height="40" 
+                            Icon="{iconPacks:Octicons Kind=ChevronLeft, Width=30, Height=30}"
+                            Background="Transparent" BorderBrush="Transparent"
+                            VerticalAlignment="Top" HorizontalAlignment="Left"
+                            Margin="60,45,0,10"
+                            Template="{StaticResource IconButtonTemplate}"
+                            Style="{StaticResource IconButtonHoverStyle}"
+                            Command="{Binding GoBackCommand}">
+            </buttons:IconButton>
+            <TextBlock Height="50" Padding="55,0,0,0" Margin="0,40,0,10" FontSize="35">
                     Create a new project</TextBlock>
+        </StackPanel>
+        
         <Border BorderBrush="Black" BorderThickness="0,2,0,0"
-                        Height="440" Width="700">
+                        Height="500" Width="700">
             <StackPanel>
-                <StackPanel Height="430" Margin="0,10,0,0">
+                <StackPanel Width="680" Height="480" Margin="0,10,0,0">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Background="Transparent" VerticalAlignment="Top"
                                    Height="40" Width="250" FontSize="25" >Project Name</TextBlock>
-                        <input:InputBox Width="400" Margin="50,0,0,0"
+                        <input:InputBox Width="380" Margin="50,0,0,0"
                                         DataContext="{Binding ProjectNameInputBoxVM}"></input:InputBox>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" >
                         <TextBlock Background="Transparent" VerticalAlignment="Top" 
                                  Height="40" Width="250" FontSize="25">Project Summary</TextBlock>
-                        <input:InputBox Width="400" Height="175" Margin="50,20,0,0"
+                        <input:InputBox Width="380" Height="150" Margin="50,20,0,0"
                                         DataContext="{Binding ProjectSummaryInputBoxVM}">
                         </input:InputBox>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
                         <TextBlock Background="Transparent" 
                                    Height="40" Width="300" FontSize="25">Customer Name</TextBlock>
-                        <input:InputBox DataContext="{Binding CustomerNameInputBoxVM}"  Width="400"></input:InputBox>
+                        <input:InputBox DataContext="{Binding CustomerNameInputBoxVM}"  Width="380"></input:InputBox>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
                         <TextBlock Background="Transparent" 
                                    Height="40" Width="300" FontSize="25">Customers Email Address</TextBlock>
-                        <input:InputBox DataContext="{Binding EmailInputBoxVM}" Width="400"></input:InputBox>
+                        <input:InputBox DataContext="{Binding EmailInputBoxVM}" Width="380"></input:InputBox>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Height="50" Margin="0,10,0,0" VerticalAlignment="Center">
-                        <buttons:IconButton Content="Create" Margin="550,0,0,0" FontSize="30" Height="50" Width="150" VerticalAlignment="Center"
-                                        Background="Transparent" BorderBrush="Black" BorderThickness="2"
-                                        IsEnabled="{Binding CanCreateProject}"
-                                        Command="{Binding CreateProjectCommand}">
+                    <StackPanel Orientation="Horizontal" Height="50" Margin="0,20,0,0" VerticalAlignment="Center">
+                        <buttons:IconButton Content="Create" Margin="530,0,0,0" FontSize="30" Height="50" Width="150" VerticalAlignment="Center"
+                                            BorderBrush="Black" BorderThickness="2"
+                                            IsEnabled="{Binding CanCreateProject}"
+                                            Template="{StaticResource IconButtonTemplate}"
+                                            Style="{StaticResource IconButtonHoverStyle}"
+                                            Command="{Binding CreateProjectCommand}">
                         </buttons:IconButton>
                     </StackPanel>
                 </StackPanel>
