--- a/Shophoto/Shophoto/Views/Collections/AuxView/Tag.xaml
+++ b/Shophoto/Shophoto/Views/Collections/AuxView/Tag.xaml
@@ -34,21 +34,29 @@
                     
                     <Border Margin="20,0,20,0" BorderBrush="Black" BorderThickness="0,1,0,0">
                         <StackPanel Margin="0,10,0,0">
-                            <StackPanel Orientation="Horizontal">
+                            <StackPanel Margin="0,-10,0,-15" Orientation="Horizontal">
                                 <TextBlock Text="Desired Tag Name" FontSize="15"
                                            Width="160" Height="30" Margin="0,0,0,0"
                                            TextAlignment="Left" Padding="0,5,0,0"
                                            HorizontalAlignment="Left"></TextBlock>      
-                                <inputBox:InputBox Margin="35,0,0,0" Width="123" Height="40"
-                                                   DataContext="{Binding DesiredTagNameInputBox}"></inputBox:InputBox>
+                                <inputBox:InputBox Margin="35,20,0,0" Width="123" 
+                                                   DataContext="{Binding DesiredTagNameInputBox}">
+                                    <inputBox:InputBox.InputBindings>
+                                        <KeyBinding Key="Enter" Command="{Binding EnterCommand}"></KeyBinding>
+                                    </inputBox:InputBox.InputBindings>
+                                </inputBox:InputBox>
                                 <buttons:IconButton Width="40" Height="40" BorderBrush="Transparent"
                                                     Margin="0,0,0,0" 
-                                                    Content="Add" Command="{Binding AddCommand}"></buttons:IconButton>
+                                                    Content="Add" Command="{Binding AddCommand}">
+
+                                </buttons:IconButton>
                             </StackPanel>
                             <TextBlock>Current Tags</TextBlock>
                             <Grid Margin="0,5,0,31" Height="100">
                                 <ListView ItemsSource="{Binding TagsService.Tags}"
-                                          ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                                          ScrollViewer.CanContentScroll="True" 
+                                          ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                                          ScrollViewer.VerticalScrollBarVisibility="Auto">
                                     <ListView.ItemTemplate>
                                         <DataTemplate>
                                             <local:TagItem Margin="3"></local:TagItem>
@@ -56,7 +64,7 @@
                                     </ListView.ItemTemplate>
                                     <ListView.ItemsPanel>
                                         <ItemsPanelTemplate>
-                                            <WrapPanel Orientation="Horizontal" MaxWidth="380"></WrapPanel>
+                                            <WrapPanel Orientation="Horizontal" MaxWidth="350"></WrapPanel>
                                         </ItemsPanelTemplate>
                                     </ListView.ItemsPanel>
                                 </ListView>
