--- a/Shophoto/Shophoto/Views/Collections/AuxView/TagImageDialog.xaml
+++ b/Shophoto/Shophoto/Views/Collections/AuxView/TagImageDialog.xaml
@@ -4,28 +4,70 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Shophoto.Views.Collections.Aux"
-             mc:Ignorable="d">
+             xmlns:buttons="clr-namespace:Shophoto.Buttons"
+             xmlns:icons="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             mc:Ignorable="d" 
+             Name="tagImageDialog"
+             Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisConverter}}">
     <Grid>
         <Grid Background="Black" Opacity=".5">
             <Grid.InputBindings>
-                <MouseBinding Gesture="LeftClick" Command="{Binding CloseDialogCommand}"></MouseBinding>
+                <MouseBinding Gesture="LeftClick" Command="{Binding CloseCommand}"></MouseBinding>
             </Grid.InputBindings>
         </Grid>
-        <Grid Background="WhiteSmoke" Width="400" Height="300">
+        <Grid Background="WhiteSmoke" Height="285" Width="400" >
             <StackPanel>
                 <TextBlock Text="Tagging Images" Height="45" FontSize="30" 
                                    VerticalAlignment="Top"
                                    Margin="20,30,20,0"></TextBlock>
-                <Border BorderBrush="Black" BorderThickness="0,1,0,0" Margin="0,10,0,0"
+                <Border BorderBrush="Black" BorderThickness="0,1,0,0" Margin="0,10,0,30"
                         Width="350">
+
                     <StackPanel Margin="0,10,0,0">
-                        <ListView Height="175" Width="350" 
-                                  BorderBrush="Transparent"
-                                  ItemsSource="{Binding TagsService.Tags}">
-                            
+                        <TextBlock Text="Current Image Tags:" 
+                                Width="105" Height="18"
+                                HorizontalAlignment="Left"
+                                Margin="0,0,0,2"></TextBlock>
+                        <ListView Height="100" Width="350" 
+                                BorderBrush="Transparent"
+                                ItemsSource="{Binding TagsService.Tags}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid Height="30" Margin="4">
+                                        <Grid.InputBindings>
+                                            <MouseBinding Gesture="LeftClick" Command="{Binding DataContext.ToggleTagSelected, ElementName=tagImageDialog }"
+                                                          CommandParameter="{Binding}"></MouseBinding>
+                                        </Grid.InputBindings>
+                                        <!--
+                                        <buttons:IconButton Background="Transparent" BorderThickness="0"
+                                                            Command="{Binding ToggleTagSelected, ElementName=tagImageDialog}">
+
+                                        </buttons:IconButton>
+                                        -->
+                                        <StackPanel Orientation="Horizontal">
+                                            <icons:PackIconOcticons Kind="Tag" Width="20" Height="20"
+                                                                            Margin="5"></icons:PackIconOcticons>
+                                            <TextBlock Text="{Binding Name}" Padding="2,0,2,0"
+                                                   TextTrimming="CharacterEllipsis"
+                                                   FontSize="15" Height="20"></TextBlock>
+                                        </StackPanel>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                            <ListView.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <WrapPanel Orientation="Horizontal" MaxWidth="350"></WrapPanel>
+                                </ItemsPanelTemplate>
+                            </ListView.ItemsPanel>
                         </ListView>
+                        
                     </StackPanel>
+
+                    
                 </Border>
+                <buttons:IconButton Content="Close" 
+                                    FontSize="15" Height="40"
+                                    Command="{Binding CloseCommand}"></buttons:IconButton>
             </StackPanel>
         </Grid>
     </Grid>
