--- a/Shophoto/Shophoto/Views/Collections/AuxView/TagImageDialog.xaml
+++ b/Shophoto/Shophoto/Views/Collections/AuxView/TagImageDialog.xaml
@@ -9,6 +9,32 @@
              mc:Ignorable="d" 
              Name="tagImageDialog"
              Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisConverter}}">
+    <UserControl.Resources>
+        <Style x:Key="SelectedTagBackground" TargetType="StackPanel">
+            <Setter Property="Background" Value="WhiteSmoke"></Setter>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                    <Setter Property="Background" Value="{StaticResource SelectedBlue}"></Setter>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="SelectedTagForground" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="Black"></Setter>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                    <Setter Property="Foreground" Value="White"></Setter>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="SelectedTagIconForground" TargetType="{x:Type icons:PackIconOcticons}">
+            <Setter Property="Foreground" Value="Black"></Setter>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                    <Setter Property="Foreground" Value="White"></Setter>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <Grid Background="Black" Opacity=".5">
             <Grid.InputBindings>
@@ -17,7 +43,7 @@
         </Grid>
         <Grid Background="WhiteSmoke" Height="285" Width="400" >
             <StackPanel>
-                <TextBlock Text="Tagging Images" Height="45" FontSize="30" 
+                <TextBlock Text="Tag Image" Height="45" FontSize="30" 
                                    VerticalAlignment="Top"
                                    Margin="20,30,20,0"></TextBlock>
                 <Border BorderBrush="Black" BorderThickness="0,1,0,0" Margin="0,10,0,30"
@@ -30,25 +56,23 @@
                                 Margin="0,0,0,2"></TextBlock>
                         <ListView Height="100" Width="350" 
                                 BorderBrush="Transparent"
-                                ItemsSource="{Binding TagsService.Tags}">
+                                ItemsSource="{Binding Tags}">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <Grid Height="30" Margin="4">
                                         <Grid.InputBindings>
-                                            <MouseBinding Gesture="LeftClick" Command="{Binding DataContext.ToggleTagSelected, ElementName=tagImageDialog }"
+                                            <MouseBinding Gesture="LeftClick" Command="{Binding DataContext.ToggleTagSelected, ElementName=tagImageDialog}"
                                                           CommandParameter="{Binding}"></MouseBinding>
                                         </Grid.InputBindings>
-                                        <!--
-                                        <buttons:IconButton Background="Transparent" BorderThickness="0"
-                                                            Command="{Binding ToggleTagSelected, ElementName=tagImageDialog}">
-
-                                        </buttons:IconButton>
-                                        -->
-                                        <StackPanel Orientation="Horizontal">
+                                        <StackPanel Orientation="Horizontal"
+                                                    Style="{StaticResource SelectedTagBackground}">
                                             <icons:PackIconOcticons Kind="Tag" Width="20" Height="20"
-                                                                            Margin="5"></icons:PackIconOcticons>
-                                            <TextBlock Text="{Binding Name}" Padding="2,0,2,0"
+                                                                    Style="{StaticResource SelectedTagIconForground}"
+                                                                    Margin="5"></icons:PackIconOcticons>
+                                            <TextBlock Text="{Binding Tag.Name}" Padding="2,0,2,0"
+                                                       Style="{StaticResource SelectedTagForground}"
                                                    TextTrimming="CharacterEllipsis"
+                                                       Margin="0,0,3,0"
                                                    FontSize="15" Height="20"></TextBlock>
                                         </StackPanel>
                                     </Grid>
